T11797: Fix promoline white space

--- a/src/components/Section/Section.css
+++ b/src/components/Section/Section.css
@@ -55,7 +55,7 @@
     }
   }
 
-  + section {
+  + section:not(.PromoLineSection) {
     padding-top: 4rem;
   }
 
